--- a/AreaPubblica/Views/Didattica/Seduta.cshtml
+++ b/AreaPubblica/Views/Didattica/Seduta.cshtml
@@ -14,7 +14,7 @@
 		<h2 class="mt-4">
 			Cerimonia di laurea triennale
 		</h2>
-		<h5 class="mt-3">
+		<h5 class="mt-3 fw-normal">
 			La consegna dei diplomi di laurea triennale della sessione straordinaria 2023/24 si svolgerà venerdì 9 maggio 2025 in due cerimonie: la prima alle ore 10.00, la seconda alle ore 13.30.</br>
 
 			Le laureate e i laureati potranno scegliere indistintamente e fino ad esaurimento dei posti disponibili, la cerimonia di preferenza. In ogni caso saranno garantiti i posti per tutte/i.</br>
@@ -52,7 +52,7 @@
 					Venerdì 9 maggio 2025, ore 13.30
 				</button>
 			</h2>
-			<div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+			<div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
 				<div class="accordion-body">
 					<ul>
 						<li>13.40 Saluto della Rettrice Andrea Tiziani, saluto delle autorità</li>
