--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -150,7 +150,7 @@
 
                 <p class="mt-3 text-center">Se non sei ancora registrato</p>
                 <div class="d-flex justify-content-center">
-                    <a class="btn btn-secondary" asp-controller="Login" asp-action="Register">Registrati qui</a>
+                    <a class="btn btn-primary" asp-controller="Login" asp-action="Register">Registrati qui</a>
                 </div>
             </div>
         </div>
