--- a/AreaLavoroStudente/MasterPage.master
+++ b/AreaLavoroStudente/MasterPage.master
@@ -55,10 +55,27 @@
     </asp:ContentPlaceHolder>
 </head>
 <body class="m-0 flex-wrapper">
+
+    <%--MODAL--%>
+    <div class="modal fade" id="authErrorModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Errore autenticazione</h5>
+                </div>
+                <div class="modal-body">
+                    Non sei autenticato correttamente. Verrai reindirizzato al login.
+                </div>
+                <div class="modal-footer">
+                    <a href="Login.aspx" class="btn btn-primary">Torna al login</a>
+                </div>
+            </div>
+        </div>
+    </div>
     <form id="form1" runat="server">
 
-
         <header>
+
             <div class="sticky-top">
                 <nav class="navbar navbar-expand-lg navbar-custom">
                     <div class="container">
@@ -103,7 +120,7 @@
                                         <li><a class="dropdown-item" href="RinunciaStudi.aspx">Rinuncia agli studi</a></li>
                                     </ul>
                                 </li>
-                               
+
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Pagamenti</a>
                                 </li>
@@ -135,7 +152,7 @@
 
             <div class="bg-dark text-white">
 
-        
+
                 <div class="container d-flex justify-content-between align-items-end flex-wrap">
                     <div>
                         <img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid my-3" width="150px">
@@ -160,5 +177,16 @@
         </footer>
     </form>
 </body>
+<script>
+    function showAuthErrorModal() {
+        const modal = new bootstrap.Modal(document.getElementById('authErrorModal'));
+        modal.show();
+
+        // Timeout per il reindirizzamento automatico dopo 8 secondi
+        setTimeout(function () {
+            window.location.href = 'Login.aspx';
+        }, 8000);
+    }
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </html>
