--- a/AreaLavoroStudente/MasterPage.master
+++ b/AreaLavoroStudente/MasterPage.master
@@ -79,12 +79,8 @@
                                 <li class="nav-item">
                                     <a class="nav-link active" href="Homepage.aspx">Home</a>
                                 </li>
-                                <li id="liMateriali" runat="server" class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Lezioni</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Accesso lezioni</a></li>
-                                        <li><a class="dropdown-item" href="Lezioni_Materiali.aspx">Materiale lezioni</a></li>
-                                    </ul>
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="Lezioni_Materiali.aspx">Lezioni e materiali</a>
                                 </li>
                                 <li id="liAppelli" runat="server" class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Appelli</a>
