aggiunto json per area pubblica

--- a/AreaPubblica/Views/Home/Index.cshtml
+++ b/AreaPubblica/Views/Home/Index.cshtml
@@ -202,7 +202,7 @@
 				<img src="~/Sources/RicercaUNIGEN.jpg" style="" class="card-img-top " alt="...">
 				<div class="card-body">
 					<p class="fw-bold"> UniGeneration per la ricerca.</p>
-					<p class="card-text">I nostri ricercatori UniGeneration lavorano senza sosta. – Scopri studi, pubblicazioni e progetti di ricerca in corso! Accedi alle risorse accademiche, esplora i temi innovativi e resta aggiornato sui progressi nel tuo settore di interesse. </p>
+					<p class="card-text">I nostri ricercatori UniGeneration lavorano senza sosta. Scopri studi, pubblicazioni e progetti di ricerca in corso! Accedi alle risorse accademiche, esplora i temi innovativi e resta aggiornato sui progressi nel tuo settore di interesse. </p>
 				</div>
 			</div>
 
