Card index home

--- a/AreaPubblica/Views/Home/Index.cshtml
+++ b/AreaPubblica/Views/Home/Index.cshtml
@@ -137,12 +137,12 @@
 				</div>
 				</a>
 
-				<a class="nav-link text-dark" asp-area="" asp-controller="OffertaFormativa" asp-action="#">
+				<a class="nav-link text-dark" asp-area="" asp-controller="OffertaFormativa" asp-action="">
 				<div class="card" style="width: 18rem;transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.03)'; this.style.backgroundColor='rgba(0, 0, 0, 0.05)'" onmouseout="this.style.transform='scale(1)'; this.style.backgroundColor='transparent'">
 					<img src="~/Sources/pianodistudioUNIGEN.png" class="card-img-top" alt="...">
 					<div class="card-body">
 						<p class="fw-bold">Piano Di Studi</p>
-						<p class="card-text">Esplora il piano di studi del tuo corso! Consulta gli insegnamenti, i crediti formativi e l'organizzazione del tuo percorso accademico in modo semplice e intuitivo.</p>
+						<p class="card-text">Esplora il piano di studi del tuo corso! Consulta gli insegnamenti, i crediti formativi e l'organizzazione del tuo percorso accademico.</p>
 					</div>
 				</div>
 				</a>
