sistemato Piano di studi

--- a/AreaPubblica/Views/Home/Index.cshtml
+++ b/AreaPubblica/Views/Home/Index.cshtml
@@ -145,7 +145,7 @@
 			</div>
 
 			<div class="col-12 col-sm-6 col-lg-3">
-				<a class="nav-link text-dark" asp-area="" asp-controller="OffertaFormativa" asp-action="PianoDiStudi">
+				<a class="nav-link text-dark" asp-area="" asp-controller="OffertaFormativa" asp-action="PianoStudi">
 					<div class="card" style="transition: all 0.3s ease; height: 500px;"
 						 onmouseover="this.style.transform='scale(1.03)'; this.style.backgroundColor='rgba(0, 0, 0, 0.05)'"
 						 onmouseout="this.style.transform='scale(1)'; this.style.backgroundColor='transparent'">
