--- a/AreaLavoroStudente/MasterPage.master
+++ b/AreaLavoroStudente/MasterPage.master
@@ -5,6 +5,7 @@
 <html>
 <head runat="server">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -23,15 +24,59 @@
         .dropdown-menu > li:hover > .dropdown-submenu {
             display: block;
         }
+
+        .navbar-nav.navbar-right {
+            margin-left: auto; /* Spinge a destra gli elementi della navbar */
+        }
+
+        /* Margini tra i bottoni */
+        .navbar-nav .nav-item {
+            margin-left: 15px; /* Aggiungi margine tra i vari bottoni */
+        }
+
+            .navbar-nav .nav-item .btn-light {
+                margin-top: 5px; /* Spazio tra i bottoni */
+            }
+
+                /* Aggiungi un margine tra l'icona e il nome dello studente */
+                .navbar-nav .nav-item .btn-light i {
+                    margin-right: 10px; /* Aggiungi uno spazio tra l'icona e il testo */
+                }
+
+        .flex-wrapper {
+            display: flex;
+            min-height: 100vh;
+            flex-direction: column;
+            justify-content: space-between;
+        }
     </style>
 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
-<body>
+
+<body class="m-0 flex-wrapper">
+
+    <%--MODAL--%>
+    <div class="modal fade" id="authErrorModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Errore autenticazione</h5>
+                </div>
+                <div class="modal-body">
+                    Non sei autenticato correttamente. Verrai reindirizzato al login.
+                </div>
+                <div class="modal-footer">
+                    <a href="Login.aspx" class="btn btn-primary">Torna al login</a>
+                </div>
+            </div>
+        </div>
+    </div>
     <form id="form1" runat="server">
 
         <header>
+
             <div class="sticky-top">
                 <nav class="navbar navbar-expand-lg navbar-custom">
                     <div class="container">
@@ -50,16 +95,14 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="#">Home</a>
+                                    <a class="nav-link active" href="Homepage.aspx">Home</a>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Lezioni</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Accesso lezioni</a></li>
-                                        <li><a class="dropdown-item" href="#">Materiale lezioni</a></li>
-                                    </ul>
+
+                                <li id="liMateriali" runat="server" class="nav-item">
+                                    <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">Lezioni</a>
                                 </li>
-                                <li class="nav-item dropdown">
+
+                                <li id="liAppelli" runat="server" class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Appelli</a>
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" href="Appelli_Prenotazione.aspx">Prenotazione Appelli</a></li>
@@ -69,16 +112,32 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Piano di Studio</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Libretto Carriera</a>
+                                <li id="li1" runat="server" class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">La tua carriera</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="AvanzamentoVoti.aspx">Libretto</a></li>
+                                        <li><a class="dropdown-item" href="RinunciaStudi.aspx">Rinuncia agli studi</a></li>
+                                    </ul>
                                 </li>
+
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Pagamenti</a>
                                 </li>
-                                <li class="nav-item">
+                                <li id="liComunicazioni" runat="server" class="nav-item">
                                     <a class="nav-link" href="#">Comunicazioni</a>
                                 </li>
                             </ul>
+
+                            <ul class="navbar-nav navbar-right">
+                                <li class="nav-item">
+                                    <a class="btn btn-light btn-sm disabled me-2"><i class="bi bi-person-circle"></i>
+                                        <asp:Label ID="lblStudente" runat="server"></asp:Label></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="btn btn-light btn-sm">Logout</a>
+                                </li>
+                            </ul>
+
                         </div>
                     </div>
                 </nav>
@@ -89,12 +148,16 @@
         </asp:ContentPlaceHolder>
 
         <footer>
-            <div class="bg-dark text-white h-100 ">
+
+            <div class="bg-dark text-white">
+
+
                 <div class="container d-flex justify-content-between align-items-end flex-wrap">
                     <div>
                         <img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid my-3" width="150px">
-                        <p class="fs-4 ms-4 mb-0">Università UNIGen</p>
-                        <p class="fs-6">Milano, Milano, MI 20100, IT</p>
+                        <p class="fs-4">Università UNIGen</p>
+                        <p class="fs-6">Milano, MI 20100, IT</p>
+
                     </div>
                     <div>
                         <p class="fs-6">© 2024 Generation: You Employed, Inc.</p>
@@ -113,5 +176,16 @@
         </footer>
     </form>
 </body>
+<script>
+    function showAuthErrorModal() {
+        const modal = new bootstrap.Modal(document.getElementById('authErrorModal'));
+        modal.show();
+
+        // Timeout per il reindirizzamento automatico dopo 8 secondi
+        setTimeout(function () {
+            window.location.href = 'Login.aspx';
+        }, 8000);
+    }
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </html>
