--- a/AreaPubblica/Views/OffertaFormativa/ElencoCorsiCompleti.cshtml
+++ b/AreaPubblica/Views/OffertaFormativa/ElencoCorsiCompleti.cshtml
@@ -8,7 +8,11 @@
 
 <div class="container mb-5" style="padding-top: 120px;">
     <h1 class="mb-4">Corsi di Laurea per Tipo e Facoltà</h1>
-
+    <p>La nostra università online propone una vasta gamma di corsi di laurea, pensati per rispondere alle esigenze di formazione nei più diversi ambiti disciplinari.
+        L’offerta comprende percorsi di laurea triennale, magistrale e a ciclo unico, così da permettere a ogni studente di scegliere il cammino più adatto ai propri interessi
+        e obiettivi professionali. Ogni corso è progettato per offrire una preparazione solida, aggiornata e in linea con le richieste del mondo del lavoro, 
+        mantenendo al tempo stesso la flessibilità tipica della didattica online. Qualunque sia il tuo percorso, troverai un ambiente dinamico, accessibile e orientato al supporto costante
+        dello studente.</p>
     <div class="accordion" id="accordionTipo">
         @foreach (var tipo in tipoGruppi)
         {
