--- a/AreaPubblica/Views/Home/Index.cshtml
+++ b/AreaPubblica/Views/Home/Index.cshtml
@@ -101,7 +101,7 @@
 		<section id="next-section">
 			<div class="row justify-content-center g-4">
 
-				<h2>Offerta Formativa</h2>
+				<h2 class="text-center">Offerta Formativa</h2>
 
 				<div class="col-12 col-sm-6 col-lg-3">
 					<a class="nav-link text-dark" asp-area="" asp-controller="OffertaFormativa" asp-action="ElencoDocentiConEsami">
