--- a/AreaPubblica/Views/OffertaFormativa/PianoStudi.cshtml
+++ b/AreaPubblica/Views/OffertaFormativa/PianoStudi.cshtml
@@ -6,6 +6,7 @@
 	var dati = ViewBag.PianiStudi as List<dynamic>;
 }
 
+<div style="height: 3vh;"></div>
 <div class="container" style="padding-top: 100px; padding-bottom: 100px;">
 	<h1 class="mb-4">Piani di Studio</h1>
 
