--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -117,10 +117,10 @@
                 <div>
                     <p class="fs-5 mb-1">Chi Siamo</p>
                     <ul class="list-unstyled ms-3">
-                        <li><a href="#" class="text-white">Contatti</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Contatti" class="text-white">Contatti</a></li>
                         <li><a href="#" class="text-white">Come Funziona</a></li>
                         <li><a href="#" class="text-white">FAQ</a></li>
-                        <li><a href="#" class="text-white">Privacy</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Privacy" class="text-white">Privacy</a></li>
                     </ul>
                 </div>
             </div>
