--- a/AreaPubblica/Views/OffertaFormativa/ElencoDocentiConEsami.cshtml
+++ b/AreaPubblica/Views/OffertaFormativa/ElencoDocentiConEsami.cshtml
@@ -6,7 +6,13 @@
 }
 
 <div class="container mb-5" style="padding-top: 120px;">
-   <h1 class="mb-2">Esami e Docenti</h1>
+   
+    <h1 class="mt-3">Esami e Docenti</h1>
+    <div class="mt-2 mb-5">
+        Consulta l'elenco completo dei docenti per ogni corso e facoltà, insieme agli esami che tengono. 
+        Scopri le materie che insegnano per organizzare al meglio il tuo percorso di studi e scegliere consapevolmente le discipline che più ti interessano!
+    </div>
+
     <div class="accordion" id="accordionFacolta">
         @foreach (var facolta in facoltaGruppi)
         {
