--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -119,7 +119,7 @@
                     <ul class="list-unstyled ms-3">
                         <li><a asp-area="" asp-controller="Home" asp-action="Contatti" class="text-white">Contatti</a></li>
                         <li><a href="#" class="text-white">Come Funziona</a></li>
-                        <li><a href="#" class="text-white">FAQ</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="FAQ" class="text-white">FAQ</a></li>
                         <li><a asp-area="" asp-controller="Home" asp-action="Privacy" class="text-white">Privacy</a></li>
                     </ul>
                 </div>
