--- a/AreaDocente/Views/Home/ComeFunziona.cshtml
+++ b/AreaDocente/Views/Home/ComeFunziona.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "FAQ";
+    ViewData["Title"] = "Come Funziona?";
 }
 
 <div class="container">
-    <h1 class="text-center">FAQ Università</h1>
-    <p class="text-center">Domande frequenti per gli docenti universitari</p>
+    <h1 class="text-center">Come funziona il pannello docente?</h1>
+    <p class="text-center">Domande frequenti per l'uso del pannello</p>
     <div class="accordion" id="faqAccordion">
         <div class="accordion-item">
             <h2 class="accordion-header" id="heading1">
