--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -105,7 +105,7 @@
                                     Immatricolazione
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" style="color:inherit; " href="/Studenti/Immatricolazione?cod=@ViewData["studente_id"]">Immatricolazione</a></li>          @*  
+                                    <li><a class="dropdown-item" style="color:inherit; " href="/Studenti/Immatricolati?cod=@ViewData["studente_id"]">Immatricolazione</a></li>          @*  
                                     <li><a class="dropdown-item" style="color:inherit; " href="/Immatricolazione/Add?cod=@ViewData["studente_id"]">Invio documenti</a></li>
                                 *@
                                 </ul>
