--- a/AreaDocente/Views/Home/Contatti.cshtml
+++ b/AreaDocente/Views/Home/Contatti.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-8">
+        <div class="col-12 col-lg-8">
             <div class="mt-3">
                 <h1 class="alert-dark mb-5 mt-5">Contatti</h1>
                 <h4 class="alert-dark fw-normal mt-5">Centralino</h4>
