--- a/AreaDocente/Views/Home/Privacy.cshtml
+++ b/AreaDocente/Views/Home/Privacy.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-8">
+        <div class="col-12 col-lg-8">
             <h1 style="font-size:60px;"> Informativa sulla Privacy</h1>
 
 
