Inizio sezione prove

--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -66,8 +66,8 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Appelli" asp-action="List">Appelli</a></li>
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Tests" asp-action="Add">Test</a></li>
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Valutazioni" asp-action="ValutazioneTest">Valutazioni</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Prove" asp-action="Add">Test</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Prove" asp-action="ValutazioneTest">Valutazioni</a></li>
                                 </ul>
                             </li>
 
