--- a/AreaPubblica/Views/Contatti/Index.cshtml
+++ b/AreaPubblica/Views/Contatti/Index.cshtml
@@ -17,32 +17,32 @@
 		<div class="col-8">
 			<div class="d-flex flex-column align-items-center mt-5" style="justify-content: center;">
 				<div class="w-50 mb-5 mt-3">
-					<h1 class="alert-dark mb-5 mt-5">Contatti</h1>
-					<h4 class="alert-dark fw-normal mt-5">Centralino</h4>
+					<h1 class=" mb-5 mt-5">Contatti</h1>
+					<h4 class=" fw-normal mt-5">Centralino</h4>
 					<h5 class="fw-light">
 						Tel +39 0123 456 789</br>
 						email: centralino@unigen.it
 					</h5>
 
-					<h4 class="alert-dark fw-normal mt-5">URP Unità Relazioni con il Pubblico</h4>
+					<h4 class="fw-normal mt-5">URP Unità Relazioni con il Pubblico</h4>
 					<h5 class="fw-light">
 						Tel +39 0123 456 789</br>
 						email: urp@unigen.it
 					</h5>
 
-					<h4 class="alert-dark fw-normal mt-5">Studenti e Post-laurea</h4>
+					<h4 class="fw-normal mt-5">Studenti e Post-laurea</h4>
 					<h5 class="fw-light">
 						Tel +39 0123 456 789</br>
 						email: studentipostlaurea@unigen.it
 					</h5>
 
-					<h4 class="alert-dark fw-normal mt-5">Ricerca</h4>
+					<h4 class=" fw-normal mt-5">Ricerca</h4>
 					<h5 class="fw-light">
 						Tel +39 0123 456 789</br>
 						email: ricerca@unigen.it
 					</h5>
 
-					<h4 class="alert-dark fw-normal mt-5">International</h4>
+					<h4 class="fw-normal mt-5">International</h4>
 					<h5 class="fw-light">
 						Tel +39 0123 456 789</br>
 						email: international@unigen.it</br>
