--- a/AreaPubblica/Views/OffertaFormativa/ElencoDocentiConEsami.cshtml
+++ b/AreaPubblica/Views/OffertaFormativa/ElencoDocentiConEsami.cshtml
@@ -1,63 +1,72 @@
 ﻿@model List<AreaPubblica.Models.Entities.Docente>
 
 @{
-    var facoltaGruppi = ((IEnumerable<dynamic>)ViewBag.FacoltaCorsiEsami)
-                        .GroupBy(x => x.Facolta);
+	var facoltaGruppi = ((IEnumerable<dynamic>)ViewBag.FacoltaCorsiEsami)
+						.GroupBy(x => x.Facolta);
 }
 
 <div class="container mb-5" style="padding-top: 120px;">
-   
-    <h1 class="mt-3">Esami e Docenti</h1>
-    <div class="mt-2 mb-5">
-        Consulta l'elenco completo dei docenti per ogni corso e facoltà, insieme agli esami che tengono. 
-        Scopri le materie che insegnano per organizzare al meglio il tuo percorso di studi e scegliere consapevolmente le discipline che più ti interessano!
-    </div>
+	<div class="row">
+		<h1 class="mt-3">Esami e Docenti</h1>
+		<div class="col-md-8">
+			<div class="mt-2 mb-5">
+				Consulta <b>l'elenco completo dei docenti</b> per ogni corso e facoltà, insieme agli esami che tengono.
+				Scopri le materie che insegnano per organizzare al meglio il tuo percorso di studi e scegliere consapevolmente le discipline che più ti interessano!
+			</div>
 
-    <div class="accordion" id="accordionFacolta">
-        @foreach (var facolta in facoltaGruppi)
-        {
-            string facoltaId = "facolta_" + facolta.Key.Replace(" ", "").ToLowerInvariant();
+			<div class="accordion" id="accordionFacolta">
+				@foreach (var facolta in facoltaGruppi)
+				{
+					string facoltaId = "facolta_" + facolta.Key.Replace(" ", "").ToLowerInvariant();
 
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="heading-@facoltaId">
-                    <button class="accordion-button collapsed" type="button"
-                            data-bs-toggle="collapse"
-                            data-bs-target="#@facoltaId"
-                            aria-expanded="false"
-                            aria-controls="@facoltaId">
-                        <strong>@facolta.Key</strong>
-                    </button>
-                </h2>
-                <div id="@facoltaId" class="accordion-collapse collapse"
-                     aria-labelledby="heading-@facoltaId"
-                     data-bs-parent="#accordionFacolta">
-                    <div class="accordion-body">
-                        @{
-                            var docenti = facolta
-                            .GroupBy(x => new { x.NomeDocente, x.CognomeDocente })
-                            .OrderBy(d => d.Key.CognomeDocente);
-                        }
+					<div class="accordion-item">
+						<h2 class="accordion-header" id="heading-@facoltaId">
+							<button class="accordion-button collapsed" type="button"
+									data-bs-toggle="collapse"
+									data-bs-target="#@facoltaId"
+									aria-expanded="false"
+									aria-controls="@facoltaId">
+								<strong>@facolta.Key</strong>
+							</button>
+						</h2>
+						<div id="@facoltaId" class="accordion-collapse collapse"
+							 aria-labelledby="heading-@facoltaId"
+							 data-bs-parent="#accordionFacolta">
+							<div class="accordion-body">
+								@{
+									var docenti = facolta
+									.GroupBy(x => new { x.NomeDocente, x.CognomeDocente })
+									.OrderBy(d => d.Key.CognomeDocente);
+								}
 
-                        @foreach (var docente in docenti)
-                        {
-                            <div class="mb-3">
-                                <h5>@docente.Key.NomeDocente @docente.Key.CognomeDocente</h5>
-                                <ul class="list-group">
-                                    @foreach (var esame in docente)
-                                    {
-                                        <li class="list-group-item">
-                                            <strong>Esame:</strong> @esame.Esame <br />
-                                            <strong>Corso:</strong> @esame.Corso
-                                        </li>
-                                    }
-                                </ul>
-                            </div>
-                        }
-                    </div>
-                </div>
-            </div>
-        }
-    </div>
+								@foreach (var docente in docenti)
+								{
+									<div class="mb-3">
+										<h5>@docente.Key.NomeDocente @docente.Key.CognomeDocente</h5>
+										<ul class="list-group">
+											@foreach (var esame in docente)
+											{
+												<li class="list-group-item">
+													<strong>Esame:</strong> @esame.Esame <br />
+													<strong>Corso:</strong> @esame.Corso
+												</li>
+											}
+										</ul>
+									</div>
+								}
+							</div>
+						</div>
+					</div>
+				}
+			</div>
+		</div>
+
+		<div class="col-md-4 d-flex align-items-start">
+			<img src="~/sources/docentelavagna.png" class="img-fluid rounded shadow" alt="Docente alla lavagna" />
+		</div>
+	</div>
 </div>
+
+
 <div style="height:42vh;">
 </div>
